--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -8,15 +8,19 @@
  Version: 0.1
  */
 
- @keyframes banner-title-up {
-  0% {
-    top: 50px;
-  }
-  100% {
-    top: 0%;
-  }
+ @keyframes banner-title-up{
+    0%{
+        top: 50px;
+    }
+    100% {
+        top: 0%;
+    }
 }
-.banner img {
-  position: relative;
-  animation: banner-title-up cubic-bezier(0.2, 1, 0.3, 1) 3s;
+
+.banner{
+    img{
+        position: relative;
+        animation: banner-title-up cubic-bezier(0.2,1,0.3,1) 3s;
+    }
 }
+    
