--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -8,7 +8,7 @@
  Version: 0.1
  */
 
- @keyframes banner-title-up{
+@keyframes banner-title-up{
     0%{
         top: 50px;
     }
@@ -17,7 +17,19 @@
     }
 }
 
+@keyframes banner-background-down{
+    0%{
+        background-position: 0px -50px;
+        background-repeat: no-repeat;
+    }
+    100%{
+        background-position: 0px 0px;
+        background-repeat:  no-repeat;
+    }
+}
+
 .banner{
+        animation: banner-background-down cubic-bezier(0.2,1,0.3,1) 3s;
     img{
         position: relative;
         animation: banner-title-up cubic-bezier(0.2,1,0.3,1) 3s;
