--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -33,3 +33,34 @@
   position: relative;
   animation: banner-title-up cubic-bezier(0.2, 1, 0.3, 1) 3s;
 }
+
+.story h2 {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+.story h2 h2:before {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+.story h2 h2:after {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+.story__article:after {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+.story__article:before {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+
+.story .story-transition {
+  opacity: 1;
+  transform: translateY(0px);
+}
