--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -35,4 +35,35 @@
         animation: banner-title-up cubic-bezier(0.2,1,0.3,1) 3s;
     }
 }
-    
+
+.story{
+    h2{
+        opacity:0;
+        h2:before{
+            opacity:0;
+            transform: translateY(20px);
+            transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+        }
+        h2:after{
+            opacity:0;
+            transform: translateY(20px);
+            transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+        }
+        
+    }
+    &__article:after{
+        opacity:0;
+        transform: translateY(20px);
+        transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+    }
+    &__article:before{
+        opacity:0;
+        transform: translateY(20px);
+        transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+    }
+    .story-transition{
+        opacity:1;
+        transform:translateY(0px);
+    }
+}
+
