Ajout de l'animation section personnages

--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -33,7 +33,7 @@
   position: relative;
   animation: banner-title-up cubic-bezier(0.2, 1, 0.3, 1) 3s;
 }
-
+/* story section animation */
 .story h2 {
   opacity: 0;
   transform: translateY(20px);
@@ -69,6 +69,16 @@
   transform: translateY(0px);
 }
 .story__article.story-transition-article::after {
+  opacity: 1;
+  transform: translateY(0px);
+}
+/* characters section animation */
+#characters {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+#characters.characters-transition {
   opacity: 1;
   transform: translateY(0px);
 }
