--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -89,3 +89,23 @@
         transform: translateY(0px);
     }
 }
+/* place section animation */
+#place{
+    opacity:0;
+    transform: translateY(20px);
+    transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+    div p{
+        opacity: 0;
+        transform: translateY(-20px);
+        transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+    }
+    &.place-transition{
+        opacity:1;
+        transform:translateY(0px);
+        div p{
+            opacity: 1;
+            transform: translateY(0px);
+        }
+    }
+    
+}
