--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -101,4 +101,32 @@
   opacity: 1;
   transform: translateY(0px);
 }
-
+/* studio section animation */
+#studio h2 {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+#studio h2 h2:before {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+#studio h2 h2:after {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+#studio .studio-transition{
+  opacity: 1;
+  transform: translateY(0px);
+}
+#studio div:before {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+#studio div.studio-transition-text::before {
+  opacity: 1;
+  transform: translateY(0px);
+}
