--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -109,3 +109,38 @@
     }
     
 }
+/* studio section animation */
+#studio{
+    h2{
+        opacity:0;
+        transform: translateY(20px);
+        transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+        h2:before{
+            opacity:0;
+            transform: translateY(20px);
+            transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+        }
+        h2:after{
+            opacity:0;
+            transform: translateY(20px);
+            transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+        }
+        
+    }
+    .studio-transition{
+        opacity:1;
+        transform:translateY(0px);
+    }
+    div{
+
+        &:before{
+            opacity: 0;
+            transform: translateY(20px);
+            transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+        }
+        &.studio-transition-text::before{
+            opacity: 1;
+            transform: translateY(0px);
+        }
+    }
+}
