--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -130,3 +130,31 @@
   opacity: 1;
   transform: translateY(0px);
 }
+/* footer section animation */
+.site-footer::before{
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+.site-footer::after{
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+.site-footer.footer-transition::before{
+  opacity: 1;
+  transform: translateY(0px);
+}
+.site-footer.footer-transition::after{
+  opacity: 1;
+  transform: translateY(0px);
+}
+.site-footer ul:after{
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+}
+.site-footer ul.footer-transition-flower::after{
+  opacity: 1;
+  transform: translateY(0px);
+}
