--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -144,3 +144,35 @@
         }
     }
 }
+/* footer section animation */
+.site-footer{
+    &::before{
+        opacity: 0;
+        transform: translateY(20px);
+        transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+    }
+    &::after{
+        opacity: 0;
+        transform: translateY(20px);
+        transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+    }
+    &.footer-transition::before{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    &.footer-transition::after{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    ul{
+        &:after{
+            opacity: 0;
+            transform: translateY(20px);
+            transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+        }
+        &.footer-transition-flower::after{
+            opacity: 1;
+            transform: translateY(0px);
+        }
+    }
+}
