--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -28,6 +28,15 @@
     }
 }
 
+@keyframes flower-article-rotation{
+    from{
+     transform: rotate(0deg);
+    }
+    to{
+     transform: rotate(359deg);
+    }
+ }
+
 .banner{
         animation: banner-background-down cubic-bezier(0.2,1,0.3,1) 3s;
     img{
@@ -76,6 +85,7 @@
         &.story-transition-article::after{
             opacity: 1;
             transform: translateY(0px);
+            animation: flower-article-rotation 20s infinite linear;
         }
     }
 }
