--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -26,21 +26,39 @@
     background-repeat: no-repeat;
   }
 }
+/* flower animation */
+@keyframes flower-article-rotation{
+  from{
+   transform: rotate(0deg);
+  }
+  to{
+   transform: rotate(359deg);
+  }
+}
+/* wave title animation */
+@keyframes move_wave {
+  0%, 50%, 100% {
+      transform: translateY(0);
+  }
+  25% {
+      transform: translateY(15%);
+  }
+  75% {
+      transform: translateY(-15%);
+  }
+}
 .banner {
   animation: banner-background-down cubic-bezier(0.2, 1, 0.3, 1) 3s;
 }
 .banner img {
   position: relative;
-  animation: banner-title-up cubic-bezier(0.2, 1, 0.3, 1) 3s;
+  animation: banner-title-up cubic-bezier(0.2, 1, 0.3, 1) 3s, move_wave 5s linear infinite;
+  z-index: 1;
 }
-/* flower animation */
-@keyframes flower-article-rotation{
-   from{
-    transform: rotate(0deg);
-   }
-   to{
-    transform: rotate(359deg);
-   }
+.banner video{
+  position: absolute;
+  width:95.4vw;
+  height:95.4vh;
 }
 /* story section animation */
 .story h2 {
@@ -58,7 +76,17 @@
   transform: translateY(20px);
   transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
 }
+.story h2 div{
+  opacity: 0;
+  transform: translateY(105px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s 3s;
+}
 .story .story-transition{
+  opacity: 1;
+  transform: translateY(0px);
+  width: 100%;
+}
+.story .story-transition div{
   opacity: 1;
   transform: translateY(0px);
   width: 100%;
@@ -88,7 +116,16 @@
   transform: translateY(20px);
   transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
 }
+#characters h3 div{
+  opacity: 0;
+  transform: translateY(105px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s 3s;
+}
 #characters.characters-transition {
+  opacity: 1;
+  transform: translateY(0px);
+}
+#characters.characters-transition h3 div{
   opacity: 1;
   transform: translateY(0px);
 }
@@ -103,7 +140,16 @@
   transform: translateY(-20px);
   transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
 }
+#place h3 div{
+  opacity: 0;
+  transform: translateY(105px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s 3s;
+}
 #place.place-transition {
+  opacity: 1;
+  transform: translateY(0px);
+}
+#place.place-transition h3 div{
   opacity: 1;
   transform: translateY(0px);
 }
@@ -117,6 +163,11 @@
   transform: translateY(20px);
   transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
 }
+#studio h2 div{
+  opacity: 0;
+  transform: translateY(105px);
+  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s 3s;
+}
 #studio h2 h2:before {
   opacity: 0;
   transform: translateY(20px);
@@ -128,6 +179,10 @@
   transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
 }
 #studio .studio-transition{
+  opacity: 1;
+  transform: translateY(0px);
+}
+#studio .studio-transition div{
   opacity: 1;
   transform: translateY(0px);
 }
@@ -212,5 +267,3 @@
   left:30px;
   bottom:20px;
 }
-
-
