--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -27,7 +27,7 @@
         background-repeat:  no-repeat;
     }
 }
-
+/* flower animation */
 @keyframes flower-article-rotation{
     from{
      transform: rotate(0deg);
@@ -36,12 +36,29 @@
      transform: rotate(359deg);
     }
  }
-
+ /* wave title animation */
+@keyframes move_wave {
+    0%, 50%, 100% {
+        transform: translateY(0);
+    }
+    25% {
+        transform: translateY(15%);
+    }
+    75% {
+        transform: translateY(-15%);
+    }
+  }
 .banner{
         animation: banner-background-down cubic-bezier(0.2,1,0.3,1) 3s;
     img{
         position: relative;
-        animation: banner-title-up cubic-bezier(0.2,1,0.3,1) 3s;
+        animation: banner-title-up cubic-bezier(0.2,1,0.3,1) 3s, move_wave 5s linear infinite;
+        z-index: 1;
+    }
+    video{
+        position: absolute;
+        width:95.4vw;
+        height:95.4vh;
     }
 }
 /* story section animation */
@@ -60,12 +77,22 @@
             transform: translateY(20px);
             transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
         }
+        div{
+            opacity: 0;
+            transform: translateY(105px);
+            transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s 3s;
+        }
         
     }
     .story-transition{
         opacity:1;
         transform:translateY(0px);
         width:100%;
+        div{
+            opacity: 1;
+            transform: translateY(0px);
+            width: 100%;
+        }
     }
     &__article:after{
         opacity:0;
@@ -94,9 +121,22 @@
     opacity:0;
     transform: translateY(20px);
     transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+    h3{
+        div{
+            opacity: 0;
+            transform: translateY(105px);
+            transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s 3s;
+        }
+    }
     &.characters-transition{
         opacity: 1;
         transform: translateY(0px);
+        h3{
+            div{
+                opacity: 1;
+                transform: translateY(0px);
+            }
+        }
     }
 }
 /* place section animation */
@@ -104,6 +144,13 @@
     opacity:0;
     transform: translateY(20px);
     transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+    h3{
+        div{
+            opacity: 0;
+            transform: translateY(105px);
+            transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s 3s;
+        }
+    }
     div p{
         opacity: 0;
         transform: translateY(-20px);
@@ -112,6 +159,12 @@
     &.place-transition{
         opacity:1;
         transform:translateY(0px);
+        h3{
+            div{
+                opacity: 1;
+                transform: translateY(0px);
+            }
+        }
         div p{
             opacity: 1;
             transform: translateY(0px);
@@ -125,6 +178,11 @@
         opacity:0;
         transform: translateY(20px);
         transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+        div{
+            opacity: 0;
+            transform: translateY(105px);
+            transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s 3s;
+        }
         h2:before{
             opacity:0;
             transform: translateY(20px);
@@ -140,6 +198,10 @@
     .studio-transition{
         opacity:1;
         transform:translateY(0px);
+        div{
+            opacity:1;
+            transform:translateY(0px);
+        }
     }
     div{
 
