--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -331,3 +331,39 @@
     }
 
 }
+/* cloud animation */
+.story{
+    #place{
+        background: url('/koukaki/wp-content/themes/foce-child/images/Studio_Koukaki-image_place.png');
+        .big-cloud{
+            background: url('/koukaki/wp-content/themes/foce-child/images/big_cloud.png');
+            width:316px;
+            height:122px;
+            left: 950px;
+            bottom:320px;
+            filter:blur(10px);
+            position: relative;
+            z-index: 2;
+            transform:translateX(0px);
+            transition: transform linear 3s;
+            &.place-transition-cloud{
+                transform:translateX(-300px);
+            }
+        }
+        .little-cloud{
+            background: url('/koukaki/wp-content/themes/foce-child/images/little_cloud.png');
+            width:142px;
+            height: 55px;
+            left:710px;
+            bottom:265px;
+            filter: blur(8px);
+            position: relative;
+            z-index: -1;
+            transform:translateX(0px);
+            transition: transform linear 3s;
+            &.place-transition-cloud{
+                transform:translateX(-300px);
+            }
+        }
+    }
+}
