--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -10,10 +10,18 @@
 
  @keyframes banner-title-up {
   0% {
-    top: 50px;
+    transform: translateY(50px);
   }
   100% {
-    top: 0%;
+    transform: translateY(0%);
+  }
+}
+@keyframes burger-down {
+  0% {
+    transform: translateY(-50px);
+  }
+  100% {
+    transform: translateY(0%);
   }
 }
 @keyframes banner-background-down {
@@ -325,4 +333,88 @@ transition: transform linear 3s;
 }
 .story #place .little-cloud.place-transition-cloud{
   transform:translateX(-300px);
+}
+@media(max-width:699px){
+  .banner img {
+    position: relative;
+    animation: banner-title-up cubic-bezier(0.2, 1, 0.3, 1) 3s;
+    z-index: 1;
+  }
+  .banner {
+    animation: banner-background-down cubic-bezier(0.2, 1, 0.3, 1) 3s;
+  }
+  /* burger animation */
+  .main-navigation.toggled .nav-menu{
+    height:100vh;
+    animation: burger-down cubic-bezier(0.2, 1, 0.3, 1) 3s;
+  }
+  .main-navigation .burger-title.menu-toggle{
+      position: absolute;
+      bottom:5px;
+      margin-left:25%;
+  }
+  .main-navigation button{
+    margin:0px;
+    position: relative;
+    left:85%;
+  }
+  .main-navigation .left-animation-burger{
+    display: flex;
+    flex-direction: column;
+    float:left;
+  }
+  .main-navigation .right-animation-burger{
+    display: flex;
+    flex-direction: column;
+    float: right;
+  }
+  .main-navigation .left-animation-burger.menu-toggle .orchid-burger{
+    width:112px;
+    height:168px;
+    background: url('../foce/assets/images/orchid.png');
+  }
+  .main-navigation .left-animation-burger.menu-toggle .cat1-burger{
+    width:115px;
+    height:110px;
+    background: url('/koukaki/wp-content/themes/foce-child/images/cat.png');
+  }
+  .main-navigation .left-animation-burger.menu-toggle .flower-burger{
+    width:70px;
+    height:70px;
+    background: url('../foce/assets/images/flower.png');
+    background-size: cover;
+  }
+  .main-navigation .left-animation-burger.menu-toggle .cat2-burger{
+    width:105px;
+    height:95px;
+    background: url('/koukaki/wp-content/themes/foce-child/images/cat2.png');
+  }
+  .main-navigation .right-animation-burger.menu-toggle .sunflower-burger{
+    width:216px;
+    height:216px;
+    background: url('../foce/assets/images/sunflower.png');
+    background-size: cover;
+  }
+
+  .main-navigation .right-animation-burger.menu-toggle .randomflower-burger{
+    width:45px;
+    height:74px;
+    background: url('../foce/assets/images/random_flower.png');
+    background-size: cover;
+  }
+  .main-navigation .right-animation-burger.menu-toggle .cat3-burger{
+    width:109px;
+    height:98px;
+    background: url('/koukaki/wp-content/themes/foce-child/images/Group 180.png');
+    background-size: cover;
+  }
+  .main-navigation .right-animation-burger.menu-toggle .hibiscusfooter-burger{
+    width:313px;
+    height:313px;
+    background: url('../foce/assets/images/hibiscus_footer.png');
+  }
+  .main-navigation .img-title-burger.menu-toggle{
+    width:154px;
+    height:95px;
+  }
 }
