--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -380,95 +380,134 @@
   
     /* burger animation */
   
+    $font-family_1: 'Roboto Mono', monospace;
+
     .main-navigation {
-      &.toggled .nav-menu {
-        height: 100vh;
-        animation: burger-down cubic-bezier(0.2, 1, 0.3, 1) 3s;
-      }
-  
-      .burger-title.menu-toggle {
-        position: absolute;
-        bottom: 5px;
-        margin-left: 25%;
-      }
-  
-      button {
-        margin: 0px;
-        position: relative;
-        left: 85%;
-      }
-  
-      .left-animation-burger {
-        display: flex;
-        flex-direction: column;
-        float: left;
-      }
-  
-      .right-animation-burger {
-        display: flex;
-        flex-direction: column;
-        float: right;
-      }
-  
-      .left-animation-burger.menu-toggle {
-        .orchid-burger {
-          width: 112px;
-          height: 168px;
-          background: url('../foce/assets/images/orchid.png');
+        &.toggled {
+	        .nav-menu {
+		        height: 100vh;
+		        width: 100vw;
+		        animation: burger-down cubic-bezier(0.2, 1, 0.3, 1) 3s;
+	        }
         }
-  
-        .cat1-burger {
-          width: 115px;
-          height: 110px;
-          background: url('/koukaki/wp-content/themes/foce-child/images/cat.png');
-        }
-  
-        .flower-burger {
-          width: 70px;
-          height: 70px;
-          background: url('../foce/assets/images/flower.png');
-          background-size: cover;
-        }
-  
-        .cat2-burger {
-          width: 105px;
-          height: 95px;
-          background: url('/koukaki/wp-content/themes/foce-child/images/cat2.png');
-        }
-      }
-  
-      .right-animation-burger.menu-toggle {
-        .sunflower-burger {
-          width: 216px;
-          height: 216px;
-          background: url('../foce/assets/images/sunflower.png');
-          background-size: cover;
-        }
-  
-        .randomflower-burger {
-          width: 45px;
-          height: 74px;
-          background: url('../foce/assets/images/random_flower.png');
-          background-size: cover;
-        }
-  
-        .cat3-burger {
-          width: 109px;
-          height: 98px;
-          background: url('/koukaki/wp-content/themes/foce-child/images/Group 180.png');
-          background-size: cover;
-        }
-  
-        .hibiscusfooter-burger {
-          width: 313px;
-          height: 313px;
-          background: url('../foce/assets/images/hibiscus_footer.png');
-        }
-      }
-  
-      .img-title-burger.menu-toggle {
-        width: 154px;
-        height: 95px;
-      }
     }
-  }
+    .main-navigation {
+	    .burger-title {
+            &.menu-toggle {
+        		position: absolute;
+		        top: 5px;
+		        margin-left: 25%;
+	        }
+        }
+	    button {
+		    margin: 0px;
+		    position: relative;
+		    left: 85%;
+	    }
+	    .left-animation-burger {
+		    display: flex;
+		    flex-direction: column;
+		    float: left;
+	    }
+	    .right-animation-burger {
+		    display: flex;
+		    flex-direction: column;
+	    }
+	    .right-animation-burger.menu-toggle {
+		    width: 30%;
+		    position: absolute;
+		    top: 30px;
+		    right: 30%;
+		    .sunflower-burger {
+			    width: 216px;
+			    height: 216px;
+			    background: url('../foce/assets/images/sunflower.png');
+			    background-size: cover;
+		    }
+		    .randomflower-burger {
+			    width: 45px;
+			    height: 74px;
+			    background: url('../foce/assets/images/random_flower.png');
+			    background-size: cover;
+		    }
+		    .cat3-burger {
+			    width: 109px;
+			    height: 98px;
+			    background: url('/koukaki/wp-content/themes/foce-child/images/Group 180.png');
+			    background-size: cover;
+		    }
+		    .hibiscusfooter-burger {
+			    width: 150px;
+			    height: 150px;
+			    background: url('../foce/assets/images/hibiscus_footer.png');
+		    }
+	    }
+	    .left-animation-burger.menu-toggle {
+		    width: 30%;
+		    position: absolute;
+		    left: 0px;
+		    .orchid-burger {
+			    width: 56px;
+			    height: 84px;
+			    background: url('../foce/assets/images/orchid.png');
+			    background-position: 92% 50%;
+			    background-size: cover;
+			    position: relative;
+			    top: 30px;
+		    }
+		    .cat1-burger {
+			    width: 65px;
+			    height: 65px;
+			    background: url('/koukaki/wp-content/themes/foce-child/images/cat.png');
+			    background-size: cover;
+			    position: relative;
+			    left: 60%;
+			    bottom: 10px;
+		    }
+		    .flower-burger {
+			    width: 35px;
+			    height: 35px;
+			    background: url('../foce/assets/images/flower.png');
+			    background-size: cover;
+			    position: relative;
+			    left: 50%;
+			    top: 115px;
+		    }
+		    .cat2-burger {
+			    width: 55px;
+			    height: 45px;
+			    background: url('/koukaki/wp-content/themes/foce-child/images/cat2.png');
+			    background-size: cover;
+			    position: relative;
+			    top: 210px;
+			    left: 15%;
+		    }
+	    }
+	    .img-title-burger.menu-toggle {
+		    width: 75px;
+		    height: 65px;
+		    padding-top: 10px;
+	    }
+	    ul {
+		    width: 100%;
+		    padding-left: 0px;
+		    img {
+			    margin: auto;
+		    }
+		    .footer-burger-menu.menu-toggle {
+			    margin-top: 50px;
+			    text-align: center;
+			    font-size: x-small;
+		    }
+		    li {
+			    a {
+				    font-weight: 400;
+				    font-size: 2em;
+				    font-family: $font-family_1;
+				    line-height: 84px;
+				    text-align: center;
+			    }
+		    }
+	    }
+    }
+}
