--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -371,8 +371,8 @@ transition: transform linear 3s;
   .main-navigation .right-animation-burger.menu-toggle{
     width:30%;
     position: absolute;
-    top:30px;
-    right:30%;
+    right:0px;
+    top:50px;
   }
   .main-navigation .left-animation-burger.menu-toggle{
     width: 30%;
@@ -404,7 +404,7 @@ transition: transform linear 3s;
     background-size: cover;
     position:relative;
     left:50%;
-    top:115px;
+    top:100px;
   }
   .main-navigation .left-animation-burger.menu-toggle .cat2-burger{
     width:55px;
@@ -416,28 +416,38 @@ transition: transform linear 3s;
     left:15%;
   }
   .main-navigation .right-animation-burger.menu-toggle .sunflower-burger{
-    width:216px;
-    height:216px;
+    width:108px;
+    height:108px;
     background: url('../foce/assets/images/sunflower.png');
     background-size: cover;
   }
 
   .main-navigation .right-animation-burger.menu-toggle .randomflower-burger{
-    width:45px;
-    height:74px;
+    width:22px;
+    height:37px;
     background: url('../foce/assets/images/random_flower.png');
     background-size: cover;
+    position: relative;
+    bottom:35px;
+    left:90%;
   }
   .main-navigation .right-animation-burger.menu-toggle .cat3-burger{
-    width:109px;
-    height:98px;
+    width:75px;
+    height:75px;
     background: url('/koukaki/wp-content/themes/foce-child/images/Group 180.png');
     background-size: cover;
+    position: relative;
+    top: 120px;
   }
   .main-navigation .right-animation-burger.menu-toggle .hibiscusfooter-burger{
     width:150px;
-    height:150px;
-    background: url('../foce/assets/images/hibiscus_footer.png');
+    height:130px;
+    background: url('/koukaki/wp-content/themes/foce-child/images/hibiscus footer.png');
+    background-position: 0% 0%;
+    background-size: cover;
+    position: relative;
+    top:110px;
+    left:28%;
   }
   .main-navigation .img-title-burger.menu-toggle{
     width:75px;
@@ -447,6 +457,7 @@ transition: transform linear 3s;
   .main-navigation ul{
     width:100%;
     padding-left: 0px;
+    background-color: #FFF5E9;
   }
   .main-navigation ul img{
     margin: auto;
@@ -462,5 +473,9 @@ transition: transform linear 3s;
     font-family: 'Roboto Mono', monospace;
     line-height: 84px;
     text-align: center;
+  }
+  .main-navigation ul li a:hover{
+    text-shadow: #ff5c00 -1px 0 5px;
+    color: black;
   }
 }
