Ajout des animations aux fleurs du menu hamburger

--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -380,13 +380,15 @@ transition: transform linear 3s;
     left: 0px;
   }
   .main-navigation .left-animation-burger.menu-toggle .orchid-burger{
-    width:56px;
+    width:84px;
     height:84px;
     background: url('../foce/assets/images/orchid.png');
     background-position: 92% 50%;
     background-size: cover;
     position: relative;
+    right:25px;
     top:30px;
+    animation: flower-article-rotation infinite linear 20s;
   }
   .main-navigation .left-animation-burger.menu-toggle .cat1-burger{
     width:65px;
@@ -405,6 +407,7 @@ transition: transform linear 3s;
     position:relative;
     left:50%;
     top:100px;
+    animation: flower-article-rotation infinite linear 20s;
   }
   .main-navigation .left-animation-burger.menu-toggle .cat2-burger{
     width:55px;
@@ -420,16 +423,18 @@ transition: transform linear 3s;
     height:108px;
     background: url('../foce/assets/images/sunflower.png');
     background-size: cover;
+    animation: flower-article-rotation infinite linear 20s;
   }
 
   .main-navigation .right-animation-burger.menu-toggle .randomflower-burger{
-    width:22px;
+    width:37px;
     height:37px;
     background: url('../foce/assets/images/random_flower.png');
     background-size: cover;
     position: relative;
     bottom:35px;
     left:90%;
+    animation: flower-article-rotation infinite linear 20s;
   }
   .main-navigation .right-animation-burger.menu-toggle .cat3-burger{
     width:75px;
@@ -440,14 +445,14 @@ transition: transform linear 3s;
     top: 120px;
   }
   .main-navigation .right-animation-burger.menu-toggle .hibiscusfooter-burger{
-    width:150px;
-    height:130px;
-    background: url('/koukaki/wp-content/themes/foce-child/images/hibiscus footer.png');
-    background-position: 0% 0%;
+    width:200px;
+    height:200px;
+    background: url('/koukaki/wp-content/themes/foce/assets/images/hibiscus_footer.png');
     background-size: cover;
     position: relative;
     top:110px;
-    left:28%;
+    left:50%;
+    animation: flower-article-rotation infinite linear 20s;
   }
   .main-navigation .img-title-burger.menu-toggle{
     width:75px;
