--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -78,8 +78,6 @@
     }
     video{
         position: absolute;
-        width:95.4vw;
-        height:95.4vh;
     }
 }
 /* story section animation */
@@ -161,6 +159,9 @@
     }
 }
 /* place section animation */
+$color_1: #d4d95b;
+$color_2: #FFF5E9;
+
 #place{
     opacity:0;
     transform: translateY(20px);
@@ -169,7 +170,8 @@
         div{
             opacity: 0;
             transform: translateY(105px);
-            transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s 3s;
+            color: $color_1;
+            transition: all cubic-bezier(0.2, 1, 0.3, 1) 3s 3s;
         }
     }
     div p{
@@ -183,6 +185,7 @@
         h3{
             div{
                 opacity: 1;
+                color: $color_2;
                 transform: translateY(0px);
             }
         }
