--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -554,4 +554,12 @@ $color_2: #FFF5E9;
 		    }
 	    }
     }
+    .story {
+        #characters {
+            h3 {
+                position:relative;
+                right:0%;
+            }
+        }
+    }
 }
