--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -113,25 +113,23 @@
 }
 /* characters section animation */
 #characters{
-    opacity:0;
-    transform: translateY(20px);
-    transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
     h3{
         div{
             opacity: 0;
-            transform: translateY(105px);
+            transform: translateY(125px);
             transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s 1s;
         }
     }
     &.characters-transition{
-        opacity: 1;
-        transform: translateY(0px);
         h3{
             div{
                 opacity: 1;
                 transform: translateY(0px);
             }
         }
+    }
+    &.characters-animation{
+        animation: fade cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
     }
 }
 /* place section animation */
